proj1/tests/other-tests/minz-tests/error/strings.py
a = "aa
b = aa"
c = "
d = "jkahsd
